--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,8 @@
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/bootstrap-slider/dist/bootstrap-slider.min.js",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/popper.js/dist/umd/popper.min.js"
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/angular-jwt"
 
 
 
