--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material/dialog": "^10.0.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "angular-jwt": "0.1.11",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
@@ -34,8 +35,9 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
+    "@types/angular-jwt": "0.0.29",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
